Allow user to click anywhere on a status item for navigation; refs #23620

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -1197,6 +1197,12 @@
                     </li>
                 </ul>
 
+                <!-- Load script for better ux when using statusbar for navigation -->
+                <script src="template/assets/js/statusListNavigation.js?v=#{HelperForm.buildVersion}"></script>
+                <script>
+                    statusListNavigation.init()
+                </script>
+
                 <button
                     jsf:rendered="#{externalLoginBean.wizzardMode!='page5'}"
                     jsf:id="goNext"
