Include script for status bar navigation; refs #23620

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
@@ -122,6 +122,7 @@
 
     <script src="template/assets/js/script.js?v=#{HelperForm.buildVersion}"></script>
     <script src="template/assets/js/clientSideValidation.js?v=#{HelperForm.buildVersion}"></script>
+    <script src="template/assets/js/statusListNavigation.js?v=#{HelperForm.buildVersion}"></script>
 
     <!-- Favicon -->
     <link
