--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
@@ -192,7 +192,7 @@
                     class="actions__help"
                     title="#{msgs.plugin_rest_usercreation_goToHelpPages}"
                     data-bs-toggle="tooltip"
-                    data-bs-placement="left">
+                    data-bs-placement="bottom">
                     <ui:include src="/uii/includes/icon-info.xhtml" />
                     #{msgs.plugin_rest_usercreation_header_help}
                 </a>
