Add a color for hover states; refs #23713

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_base.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_base.scss
@@ -6,7 +6,6 @@
  * 5. Utilities
  */
 
-
 /* IMPORT _colors.scss */
 @use "colors";
 
@@ -40,8 +39,9 @@
   --clr-neutral-400: #eeeeee;
   --clr-neutral-600: #c4c4c4;
   --clr-neutral-800: #6e747c;
-
+  --clr-hover: hsl(303, 65%, 16%);
   --clr-accent: #ffa100;
+
   --clr-success: #16882e;
   --clr-danger: #d30404;
 
@@ -82,11 +82,9 @@ body.modal-open {
   padding-right: 0 !important;
 }
 
-
 /* Utilities */
 .highlight-border.highlight-border {
   border: 2px solid var(--clr-primary-400);
-
 }
 
 .column-start {
