Rerun tootipsInit after ajax page updates; refs #23717

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
@@ -281,6 +281,7 @@
                         break;
 
                     case "success": // This is called when ajax response is successfully processed.
+                        tooltisInit(); // Find this function in script.js
                         // NOOP.
                         $(function () {
                             $('[data-toggle="tooltip"]').tooltip();
