Dashboard delivery: Style existing data table; refs #23718

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_base.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_base.scss
@@ -63,6 +63,11 @@
   --height-footer-and-nav: 335px;
 }
 
+* {
+  /* Chrome: show fat fonts as fat fonts */
+  -webkit-font-smoothing: antialiased;
+}
+
 /* OVERRIDES */
 .tooltip {
   font-size: var(--fs-200);
