--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
@@ -521,3 +521,13 @@ button ~ .box {
   color: var(--clr-text-400);
   fill: var(--clr-primary-400);
 }
+
+#processTable th button {
+  font-weight: bold;
+  padding-left: 0;
+}
+
+#processTable tbody tbody tr {
+  display: grid;
+  grid-template-columns: 24rem 1fr;
+}
