Only show scroll bars if necessary; refs #23718

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
@@ -341,11 +341,8 @@ table button span {
 /* DB: delivery: existing data   */
 /* **************************** */
 
-.existing-data form {
-  overflow: scroll;
-}
-
-.existing-data table {
+.existing-data #myform {
+  overflow-x: auto;
 }
 
 .existing-data td {
