Dashboard delivery: style monograph overview like user reg overview; refs #23843

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_views.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_views.scss
@@ -194,6 +194,10 @@
     margin-left: 0;
     font-weight: 400;
   }
+  .control-label ~ .col-sm-12 span {
+    display: flex;
+    align-items: flex-end;
+  }
 }
 
 /* ****************************** */
