--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_components.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_components.scss
@@ -429,15 +429,19 @@ li.finished::before {
   padding-right: 0;
 }
 
+.container-escape {
+  margin-top: 7.2rem;
+  margin-bottom: 9.6rem;
+}
+
 @media (max-width: 1000px) {
   /* Make status bar larger than its container */
   .container-escape {
     width: 100vw;
     position: relative;
+    left: 50%;
     margin-left: -50vw;
     height: 100px;
-    margin-top: 100px;
-    left: 50%;
     padding: 0 16px;
   }
 }
