Dashboard delivery overview: update h3 color; #23843

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
@@ -269,6 +269,10 @@
   font-size: calc(1.3rem + 0.6vw);
 }
 
+.monograph__overview h3 {
+  color: var(--clr-primary-400);
+}
+
 .monograph__overview .grid-row {
   grid-column: 1/-1;
   display: grid;
