Monograph overview: add class for empty values; refs #22594

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_layout.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_layout.scss
@@ -32,6 +32,7 @@ main {
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
   margin-bottom: var(--gap);
+  overflow: hidden;
 
   &.one-col {
     --grid-tc: 1fr;
