--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
@@ -314,6 +314,10 @@
   flex: 0 0 calc(50% - 8px);
 }
 
+.monograph__overview .empty-val {
+  color: var(--clr-neutral-800);
+}
+
 /* Journals */
 .journal__data {
   position: relative;
