Update styling; refs #23882

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_components.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_components.scss
@@ -424,6 +424,7 @@ li.finished::before {
 }
 .statuslist li:first-of-type .status {
   padding-left: 0;
+  max-width: 150px;
 }
 .statuslist li:last-of-type .status {
   padding-right: 0;
