--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -37,17 +37,18 @@
                 rendered="#{externalLoginBean.wizzardMode=='wait'}"
                 value="#{msgs.plugin_rest_usercreation_new_account_creationSuccessfulHeading}" />
             <span
-                data-bs-toggle="tooltip" data-bs-placement="top"
+                data-bs-toggle="tooltip"
+                data-bs-placement="top"
                 title="#{msgs.plugin_rest_usercreation_helpText_page}">
-            <button
-                type="button"
-                class="btn page__help"
-                aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_pageHelp}"
-                data-bs-toggle="modal"
-                data-bs-title="help title"
-                data-bs-target="#pageHelpModal">
-                <ui:include src="/uii/includes/icon-help.xhtml" />
-            </button>
+                <button
+                    type="button"
+                    class="btn page__help"
+                    aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_pageHelp}"
+                    data-bs-toggle="modal"
+                    data-bs-title="help title"
+                    data-bs-target="#pageHelpModal">
+                    <ui:include src="/uii/includes/icon-help.xhtml" />
+                </button>
             </span>
         </h2>
 
@@ -211,19 +212,18 @@
 
                 </div>
 
-                    <script>
-                        clientSideValidation.compareInputValues.init(
+                <script>
+                                                                    clientSideValidation.compareInputValues.init(
 
-                            {
-                                input: '#password',
-                                inputConfirm: '#password2',
-                                msgSuccess: '#{msgs.plugin_rest_usercreation_new_account_confirmPasswordRight}',
-                                msgError: '#{msgs.plugin_rest_usercreation_new_account_confirmPasswordWrong}'
-                            }
+                                                                    {
+                                                                        input: '#password',
+                                                                        inputConfirm: '#password2',
+                                                                        msgSuccess: '#{msgs.plugin_rest_usercreation_new_account_confirmPasswordRight}',
+                                                                        msgError: '#{msgs.plugin_rest_usercreation_new_account_confirmPasswordWrong}'
+                                                                    }
 
-                        );
-
-                    </script>
+                                                                    );
+                                                                </script>
 
 
                 <!-- email address -->
@@ -478,8 +478,8 @@
                                 execute="@this" />
                             <f:selectItems
                                 value="#{field.selectItemList}"
-                                itemLabel="#{msgs[val]}"
-                                itemValue="#{val}"
+                                itemValue="#{var.value}"
+                                itemLabel="#{msgs[var.label]}"
                                 var="val" />
                         </h:selectOneMenu>
                         <h:selectBooleanCheckbox
@@ -503,8 +503,8 @@
                                 execute="@this" />
                             <f:selectItems
                                 value="#{field.selectItemList}"
-                                itemLabel="#{msgs[val]}"
-                                itemValue="#{val}"
+                                itemValue="#{var.value}"
+                                itemLabel="#{msgs[var.label]}"
                                 var="val" />
                         </h:selectOneRadio>
 
@@ -614,8 +614,8 @@
                                 execute="@this" />
                             <f:selectItems
                                 value="#{field.selectItemList}"
-                                itemLabel="#{msgs[val]}"
-                                itemValue="#{val}"
+                                itemValue="#{var.value}"
+                                itemLabel="#{msgs[var.label]}"
                                 var="val" />
                         </h:selectOneMenu>
                         <h:selectBooleanCheckbox
@@ -638,8 +638,8 @@
                                 execute="@this" />
                             <f:selectItems
                                 value="#{field.selectItemList}"
-                                itemLabel="#{msgs[val]}"
-                                itemValue="#{val}"
+                                itemValue="#{var.value}"
+                                itemLabel="#{msgs[var.label]}"
                                 var="val" />
                         </h:selectOneRadio>
 
@@ -751,8 +751,8 @@
                                 execute="@this" />
                             <f:selectItems
                                 value="#{field.selectItemList}"
-                                itemLabel="#{msgs[val]}"
-                                itemValue="#{val}"
+                                itemValue="#{var.value}"
+                                itemLabel="#{msgs[var.label]}"
                                 var="val" />
                         </h:selectOneMenu>
                         <h:selectBooleanCheckbox
@@ -775,8 +775,8 @@
                                 execute="@this" />
                             <f:selectItems
                                 value="#{field.selectItemList}"
-                                itemLabel="#{msgs[val]}"
-                                itemValue="#{val}"
+                                itemValue="#{var.value}"
+                                itemLabel="#{msgs[var.label]}"
                                 var="val" />
                         </h:selectOneRadio>
 
@@ -901,8 +901,8 @@
                                     execute="@this" />
                                 <f:selectItems
                                     value="#{field.selectItemList}"
-                                    itemLabel="#{msgs[val]}"
-                                    itemValue="#{val}"
+                                    itemValue="#{var.value}"
+                                    itemLabel="#{msgs[var.label]}"
                                     var="val" />
                             </h:selectOneMenu>
                             <h:selectOneRadio
@@ -914,8 +914,8 @@
                                     execute="@this" />
                                 <f:selectItems
                                     value="#{field.selectItemList}"
-                                    itemLabel="#{msgs[val]}"
-                                    itemValue="#{val}"
+                                    itemValue="#{var.value}"
+                                    itemLabel="#{msgs[var.label]}"
                                     var="val" />
                             </h:selectOneRadio>
                             <h:panelGroup
@@ -1204,8 +1204,8 @@
                 <!-- Load script for better ux when using statusbar for navigation -->
                 <script src="template/assets/js/statusListNavigation.js?v=#{HelperForm.buildVersion}"></script>
                 <script>
-                    statusListNavigation.init()
-                </script>
+                                                                    statusListNavigation.init()
+                                                                </script>
 
                 <button
                     jsf:rendered="#{externalLoginBean.wizzardMode!='page5'}"
@@ -1228,11 +1228,10 @@
 
 
         <script>
-function focusField (elem) {
-// do nothing
-}
-
-</script>
+                                    function focusField( elem ) {
+                                        // do nothing
+                                    }
+                                </script>
 
     </composite:implementation>
 
