changed help modal layout

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/helpModals.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/helpModals.xhtml
@@ -29,11 +29,13 @@
             modalId="pageHelpModal"
             modalTitle="#{msgs.plugin_rest_usercreation_new_account_page1_helpHeader}">
 
-            <p class="page-help__body1">#{msgs.plugin_rest_usercreation_new_account_page1_helpBody1}</p>
+            <p class="page-help__body1">
+                <h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page1_helpBody1}"/>
+            </p>
             <div class="page-help__img">
                 <h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page1_helpImg}" />
             </div>
-            <p class="page-help__body2">#{msgs.plugin_rest_usercreation_new_account_page1_helpBody2}</p>
+            <p class="page-help__body2"><h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page1_helpBody2}"/></p>
 
         </zlb:modal>
     </ui:fragment>
@@ -43,11 +45,13 @@
             modalId="pageHelpModal"
             modalTitle="#{msgs.plugin_rest_usercreation_new_account_page2_helpHeader}">
 
-            <p class="page-help__body1">#{msgs.plugin_rest_usercreation_new_account_page2_helpBody1}</p>
+            <p class="page-help__body1">
+                <h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page2_helpBody1}"/>
+            </p>
             <div class="page-help__img">
                 <h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page2_helpImg}" />
             </div>
-            <p class="page-help__body2">#{msgs.plugin_rest_usercreation_new_account_page2_helpBody2}</p>
+            <p class="page-help__body2"><h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page2_helpBody2}"/></p>
 
         </zlb:modal>
     </ui:fragment>
@@ -58,11 +62,11 @@
             modalId="pageHelpModal"
             modalTitle="#{msgs.plugin_rest_usercreation_new_account_page3_helpHeader}">
 
-            <p class="page-help__body1">#{msgs.plugin_rest_usercreation_new_account_page3_helpBody1}</p>
+            <p class="page-help__body1"><h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page3_helpBody1}"/></p>
             <div class="page-help__img">
                 <h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page3_helpImg}" />
             </div>
-            <p class="page-help__body2">#{msgs.plugin_rest_usercreation_new_account_page3_helpBody2}</p>
+            <p class="page-help__body2"><h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page3_helpBody2}"/></p>
 
         </zlb:modal>
     </ui:fragment>
@@ -72,11 +76,11 @@
             modalId="pageHelpModal"
             modalTitle="#{msgs.plugin_rest_usercreation_new_account_page4_helpHeader}">
 
-            <p class="page-help__body1">#{msgs.plugin_rest_usercreation_new_account_page4_helpBody1}</p>
+            <p class="page-help__body1"><h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page4_helpBody1}"/></p>
             <div class="page-help__img">
                 <h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page4_helpImg}" />
             </div>
-            <p class="page-help__body2">#{msgs.plugin_rest_usercreation_new_account_page4_helpBody2}</p>
+            <p class="page-help__body2"><h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page4_helpBody2}"/></p>
 
         </zlb:modal>
     </ui:fragment>
@@ -86,11 +90,11 @@
             modalId="pageHelpModal"
             modalTitle="#{msgs.plugin_rest_usercreation_new_account_page5_helpHeader}">
 
-            <p class="page-help__body1">#{msgs.plugin_rest_usercreation_new_account_page5_helpBody1}</p>
+            <p class="page-help__body1"><h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page5_helpBody1}"/></p>
             <div class="page-help__img">
                 <h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page5_helpImg}" />
             </div>
-            <p class="page-help__body2">#{msgs.plugin_rest_usercreation_new_account_page5_helpBody2}</p>
+            <p class="page-help__body2"><h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page5_helpBody2}"/></p>
 
         </zlb:modal>
     </ui:fragment>
@@ -100,11 +104,11 @@
             modalId="pageHelpModal"
             modalTitle="#{msgs.plugin_rest_usercreation_new_account_wait_helpHeader}">
 
-            <p class="page-help__body1">#{msgs.plugin_rest_usercreation_new_account_wait_helpBody1}</p>
+            <p class="page-help__body1"><h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_wait_helpBody1}"/></p>
             <div class="page-help__img">
                 <h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_wait_helpImg}" />
             </div>
-            <p class="page-help__body2">#{msgs.plugin_rest_usercreation_new_account_wait_helpBody2}</p>
+            <p class="page-help__body2"><h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_wait_helpBody2}"/></p>
 
         </zlb:modal>
     </ui:fragment>
@@ -114,11 +118,11 @@
             modalId="pageHelpModal"
             modalTitle="#{msgs.plugin_rest_usercreation_new_account_confirm_helpHeader}">
 
-            <p class="page-help__body1">#{msgs.plugin_rest_usercreation_new_account_confirm_helpBody1}</p>
+            <p class="page-help__body1"><h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_confirm_helpBody1}"/></p>
             <div class="page-help__img">
                 <h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_confirm_helpImg}" />
             </div>
-            <p class="page-help__body2">#{msgs.plugin_rest_usercreation_new_account_page1_helpBody2}</p>
+            <p class="page-help__body2"><h:outputText escape="false" value="#{msgs.plugin_rest_usercreation_new_account_page1_helpBody2}"/></p>
 
         </zlb:modal>
     </ui:fragment>
