--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
@@ -90,7 +90,7 @@
     <!-- Bootstrap -->
 
     <!-- BS 5 -->
-    <script src="template/js/PG/bootstrap.bundle.min.js?v=#{HelperForm.buildVersion}"></script>
+    <script src="templatePG/js/bootstrap.bundle.min.js?v=#{HelperForm.buildVersion}"></script>
     <!--
     <script src="template/js/bootstrap.min.js?v=#{HelperForm.buildVersion}"></script>
     <script src="template/js/bootstrap-slider.js?v=#{HelperForm.buildVersion}"></script>
