--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
@@ -121,6 +121,7 @@
   <!-- Custom ZLB E-Pflicht scripsts -->
 
     <script src="template/assets/js/script.js?v=#{HelperForm.buildVersion}"></script>
+    <script src="template/assets/js/accountNameValidation.js?v=#{HelperForm.buildVersion}"></script>    
     <script src="template/assets/js/clientSideValidation.js?v=#{HelperForm.buildVersion}"></script>
     <script src="template/assets/js/statusListNavigation.js?v=#{HelperForm.buildVersion}"></script>
 
