--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
@@ -110,7 +110,7 @@
                     <h2>#{msgs.plugin_rest_usercreation_subTitle}</h2>
                 </span>
                 <a
-                    href="https://digital.zlb.de/viewer/e-pflicht"
+                    href="https://digital.zlb.de/viewer/e-pflicht/"
                     target="blank"
                     class="actions__help"
                     title="#{msgs.plugin_rest_usercreation_goToHelpPages}"
