--- a/module-gui/src/main/webapp/resources/uii/template/account_creation_wizzard.xhtml
+++ b/module-gui/src/main/webapp/resources/uii/template/account_creation_wizzard.xhtml
@@ -4,7 +4,6 @@
     xmlns:composite="http://xmlns.jcp.org/jsf/composite"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:x="http://myfaces.apache.org/tomahawk"
     xmlns:c="http://java.sun.com/jsp/jstl/core"
     xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
     xmlns:o="http://omnifaces.org/ui"
@@ -69,7 +68,7 @@
                         labelText="#{msgs.plugin_rest_usercreation_userName}"
                         labelRequired="true" />
 
-                    <x:inputText
+                    <h:inputText
                         id="accountName"
                         pt:aria-label="#{msgs.plugin_rest_usercreation_userName}"
                         styleClass="form-control"
@@ -82,7 +81,7 @@
                         <f:passThroughAttribute
                             name="placeholder"
                             value="#{msgs.plugin_rest_usercreation_new_account_placeholder_accountName}" />
-                    </x:inputText>
+                    </h:inputText>
                     <!-- ICONS -->
                     <ui:include src="/uii/includes/form_icons.xhtml">
                         <ui:param
@@ -157,7 +156,7 @@
                         labelText="#{msgs.plugin_rest_usercreation_new_account_password}"
                         labelRequired="true" />
 
-                    <x:inputSecret
+                    <h:inputSecret
                         id="password"
                         pt:aria-label="#{msgs.plugin_rest_usercreation_new_account_password}"
                         forceId="true"
@@ -167,7 +166,7 @@
                         <f:passThroughAttribute
                             name="placeholder"
                             value="" />
-                    </x:inputSecret>
+                    </h:inputSecret>
 
                     <!-- Icons -->
                     <ui:include src="/uii/includes/form_icons.xhtml">
@@ -195,7 +194,7 @@
                         labelText="#{msgs.plugin_rest_usercreation_new_account_password2}"
                         labelRequired="true" />
 
-                    <x:inputSecret
+                    <h:inputSecret
                         id="password2"
                         pt:aria-label="#{msgs.plugin_rest_usercreation_new_account_password2}"
                         forceId="true"
@@ -205,7 +204,7 @@
                         <f:passThroughAttribute
                             name="placeholder"
                             value="" />
-                    </x:inputSecret>
+                    </h:inputSecret>
 
                     <!-- Icons -->
                     <ui:include src="/uii/includes/form_icons.xhtml">
@@ -455,7 +454,7 @@
                             labelRequired="#{field.required}" />
 
 
-                        <x:inputText
+                        <h:inputText
                             id="input"
                             rendered="#{field.fieldType=='input'}"
                             pt:aria-label="#{field.label}"
@@ -467,9 +466,9 @@
                             <f:passThroughAttribute
                                 name="placeholder"
                                 value="#{msgs[field.placeholderText]}" />
-                        </x:inputText>
+                        </h:inputText>
 
-                        <x:inputTextarea
+                        <h:inputTextarea
                             id="textarea"
                             rendered="#{field.fieldType=='textarea'}"
                             pt:aria-label="#{field.label}"
@@ -481,7 +480,7 @@
                             <f:passThroughAttribute
                                 name="placeholder"
                                 value="#{msgs[field.placeholderText]}" />
-                        </x:inputTextarea>
+                        </h:inputTextarea>
                         <h:selectOneMenu
                             id="dropdown"
                             rendered="#{field.fieldType=='dropdown'}"
@@ -593,7 +592,7 @@
                             labelRequired="#{field.required}" />
 
 
-                        <x:inputText
+                        <h:inputText
                             rendered="#{field.fieldType=='input'}"
                             pt:aria-label="#{field.label}"
                             styleClass="form-control"
@@ -604,10 +603,10 @@
                             <f:passThroughAttribute
                                 name="placeholder"
                                 value="#{msgs[field.placeholderText]}" />
-                        </x:inputText>
+                        </h:inputText>
 
 
-                        <x:inputTextarea
+                        <h:inputTextarea
                             rendered="#{field.fieldType=='textarea'}"
                             pt:aria-label="#{field.label}"
                             styleClass="form-control"
@@ -618,7 +617,7 @@
                             <f:passThroughAttribute
                                 name="placeholder"
                                 value="#{msgs[field.placeholderText]}" />
-                        </x:inputTextarea>
+                        </h:inputTextarea>
                         <h:selectOneMenu
                             rendered="#{field.fieldType=='dropdown'}"
                             styleClass="form-control"
@@ -730,7 +729,7 @@
                             labelRequired="#{field.required}" />
 
 
-                        <x:inputText
+                        <h:inputText
                             rendered="#{field.fieldType=='input'}"
                             pt:aria-label="#{field.label}"
                             styleClass="form-control"
@@ -741,10 +740,10 @@
                             <f:passThroughAttribute
                                 name="placeholder"
                                 value="#{msgs[field.placeholderText]}" />
-                        </x:inputText>
+                        </h:inputText>
 
 
-                        <x:inputTextarea
+                        <h:inputTextarea
                             rendered="#{field.fieldType=='textarea'}"
                             pt:aria-label="#{field.label}"
                             styleClass="form-control"
@@ -755,7 +754,7 @@
                             <f:passThroughAttribute
                                 name="placeholder"
                                 value="#{msgs[field.placeholderText]}" />
-                        </x:inputTextarea>
+                        </h:inputTextarea>
                         <h:selectOneMenu
                             rendered="#{field.fieldType=='dropdown'}"
                             styleClass="form-control"
@@ -882,7 +881,7 @@
                             data-toggle="tooltip" />
                         <div class="email controls">
 
-                            <x:inputText
+                            <h:inputText
                                 rendered="#{field.fieldType=='input'}"
                                 pt:aria-label="#{field.label}"
                                 styleClass="form-control"
@@ -893,8 +892,8 @@
                                 <f:passThroughAttribute
                                     name="placeholder"
                                     value="#{msgs[field.placeholderText]}" />
-                            </x:inputText>
-                            <x:inputTextarea
+                            </h:inputText>
+                            <h:inputTextarea
                                 rendered="#{field.fieldType=='textarea'}"
                                 pt:aria-label="#{field.label}"
                                 styleClass="form-control"
@@ -905,7 +904,7 @@
                                 <f:passThroughAttribute
                                     name="placeholder"
                                     value="#{msgs[field.placeholderText]}" />
-                            </x:inputTextarea>
+                            </h:inputTextarea>
                             <h:selectOneMenu
                                 rendered="#{field.fieldType=='dropdown'}"
                                 styleClass="form-select"
