--- a/module-gui/src/main/webapp/resources/uii/template/external_login.xhtml
+++ b/module-gui/src/main/webapp/resources/uii/template/external_login.xhtml
@@ -4,7 +4,6 @@
     xmlns:composite="http://xmlns.jcp.org/jsf/composite"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:x="http://myfaces.apache.org/tomahawk"
     xmlns:c="http://java.sun.com/jsp/jstl/core"
     xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
     xmlns:o="http://omnifaces.org/ui"
@@ -95,7 +94,7 @@
                                     labelText="#{msgs.plugin_rest_usercreation_password}"
                                     labelRequired="false" />
 
-                                <x:inputSecret
+                                <h:inputSecret
                                     id="passwort"
                                     pt:aria-label="#{msgs.passwort}"
                                     forceId="true"
@@ -105,7 +104,7 @@
                                     <f:passThroughAttribute
                                         name="placeholder"
                                         value="" />
-                                </x:inputSecret>
+                                </h:inputSecret>
 
 
                                 <!-- ICONS -->
@@ -267,17 +266,7 @@
                     </h:form>
                 </ui:fragment>
             </div>
-            <!--
-            <a
-                style="color: #FFFFFF;"
-                href="https://goobi.io/">Goobi workflow - developed by intranda</a>
-
-            <h:outputText
-                style="color:#FFFFFF;"
-                styleClass="pull-right"
-                value="#{msgs.version} #{HelperForm.version}" />
-
-            -->
+           
     </composite:implementation>
 
 
