refactor: use correct template

--- a/module-gui/src/main/webapp/resources/uii/template/external_login.xhtml
+++ b/module-gui/src/main/webapp/resources/uii/template/external_login.xhtml
@@ -10,7 +10,7 @@
     xmlns:intranda="http://xmlns.jcp.org/jsf/composite/composites"
     xmlns:zlb="http://xmlns.jcp.org/jsf/composite/composites"
     xmlns:jsf="http://xmlns.jcp.org/jsf"
-    template="/uii/templatePG/templatePG.html">
+    template="/uii/template/template.html">
 
     <composite:interface>
     </composite:interface>
@@ -266,11 +266,8 @@
                     </h:form>
                 </ui:fragment>
             </div>
-           
+
     </composite:implementation>
 
 
 </ui:composition>
-
-
-
