--- a/module-gui/src/main/webapp/resources/uii/template/reduced_content_template.html
+++ b/module-gui/src/main/webapp/resources/uii/template/reduced_content_template.html
@@ -62,7 +62,7 @@
         ===================================== -->
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="templatePG/css/lib/font-awesome.css?v=#{HelperForm.buildVersion}" />
+    <link rel="stylesheet" href="template/css/lib/font-awesome.css?v=#{HelperForm.buildVersion}" />
     <!-- Bootstrap -->
     <link rel="stylesheet" href="template/assets/css/dist/bootstrap.min.css?v=#{HelperForm.buildVersion}" />
     <!-- ZLB styles -->
@@ -89,7 +89,7 @@
     <!-- Bootstrap -->
 
     <!-- BS 5 -->
-    <script src="templatePG/js/bootstrap.bundle.min.js?v=#{HelperForm.buildVersion}"></script>
+    <script src="template/js/bootstrap.bundle.min.js?v=#{HelperForm.buildVersion}"></script>
     <!--
     <script src="template/js/bootstrap.min.js?v=#{HelperForm.buildVersion}"></script>
     <script src="template/js/bootstrap-slider.js?v=#{HelperForm.buildVersion}"></script>
@@ -120,7 +120,7 @@
   <!-- Custom ZLB E-Pflicht scripsts -->
 
     <script src="template/assets/js/script.js?v=#{HelperForm.buildVersion}"></script>
-    <script src="template/assets/js/accountNameValidation.js?v=#{HelperForm.buildVersion}"></script>    
+    <script src="template/assets/js/accountNameValidation.js?v=#{HelperForm.buildVersion}"></script>
     <script src="template/assets/js/clientSideValidation.js?v=#{HelperForm.buildVersion}"></script>
     <script src="template/assets/js/statusListNavigation.js?v=#{HelperForm.buildVersion}"></script>
 
